2006-06-27  Rodney Dawes  <dobey@novell.com>

	* 48x48/actions/Makefile.am:
	* 48x48/actions/document-print-preview.png:
	Remove this icon, as there is a scalable version available

2006-05-15  Rodney Dawes  <dobey@novell.com>

	* scalable/mimetypes/text-x-preview.icon: Update to use proper
	coordinates for the SVG file as per the Icon Theme Specification

	Fixes #329877

2006-05-15  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.15.2 release

2006-05-15  Rodney Dawes  <dobey@novell.com>

	* configure.in: Remove ALL_LINGUAS and require intltool >= 0.35.0

2006-04-29  Jakub Steiner <jimmac@ximian.com>

	* scalable/actions/zoom-*: scalables by Lapo Calamandrei

2006-04-23  Rodney Dawes  <dobey@novell.com>

	* NEWS: Update for 2.15.1 release

	* configure.in: Up version to 2.15.1 for release
	Require icon-naming-utils 0.7.2 for fixes and updates
	
2006-04-21  Jakub Steiner <jimmac@ximian.com>

	* printer, document-print-preview, document-print: shape fixes

2006-04-21  Jakub Steiner <jimmac@ximian.com>

	* scalable/actions/document-print.svg: tweaks
	* scalable/actions/document-print-preview.svg: based on Lapo's
	  artwork
	* scalable/actions/edit-find.svg:
	* scalable/actions/edit-find-replace.svg: Lapo Calamandrei's work

2006-04-20  Jakub Steiner <jimmac@ximian.com>

	* document-print.svg: action icon based on Lapo's printer device

2006-04-20  Jakub Steiner <jimmac@ximian.com>

	* document-save-as.svg
	* document-save.svg
	* edit-delete.svg: Lapo's kick-arse scalables

2006-04-20  Jakub Steiner <jimmac@ximian.com>

	* printer.svg: another contribution by Lapo Calamandrei
	* 16x16/categories: quick tangoification

2006-04-19  Rodney Dawes  <dobey@novell.com>

	* scalable/apps/Makefile.am: Fix a typo in the files list, svg not png

	Fixes #339043
	
2006-04-18  Jakub Steiner <jimmac@ximian.com>

	* accessories-dictionary: contributed by Ulisse Perusin <uli.peru@gmail.com>

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>
