@@ -4,8 +4,13 @@ context = apps
 iconsdir = $(themedir)/$(size)/$(context)
 
 icons_DATA =				\
+	accessibility-directory.png	\
 	accessories-dictionary.png	\
+	applets-screenshooter.png	\
+	boot.png	\
+	gnome-monitor.png	\
 	gnome-shutdown.png		\
+	gnome-session.png	\
 	im-aim.png	\
 	im-icq.png	\
 	im-jabber.png	\
