@@ -1,3 +1,9 @@
+2006-06-27  Jakub Steiner <jimmac@ximian.com>
+
+	* {16x16,22x22}/apps/accessibility-directory.png,
+	applets-screenshooter.png, boot.png, gnome-monitor.png,
+	gnome-session.png: bitmap versions in tango style
+
 2006-06-27  Rodney Dawes  <dobey@novell.com>
 
 	* 48x48/actions/Makefile.am:
